[metadata]
name = debug-traffic-nikit34
version = 0.0.3
author = Nikita Permyakov
author_email = permikov134@mail.ru
description = Debug traffic between Android, iOS and anyone mAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
